<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_bg">

    <LinearLayout
            android:id="@+id/tikTakToeLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:layout_margin="@dimen/dp20"
            >
        <TextView
                android:text="@string/sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20"
                android:textSize="@dimen/sp20"
                android:gravity="center"
                android:id="@+id/signInTextView"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/user_name"
                android:ems="10"
                android:maxLength="8"
                android:layout_marginTop="@dimen/dp70"
                android:imeOptions="actionNext"
                android:id="@+id/useIdEditTextView"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email_id"
                android:ems="10"
                android:layout_marginTop="@dimen/dp20"
                android:imeOptions="actionSend"
                android:id="@+id/emailIdEditTextView"/>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp2"
                    android:background="@color/bar_line"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/dp10"
                    android:layout_gravity="center"

                    />
            <TextView
                    android:text="@string/or"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp20"
                    android:textSize="@dimen/sp12"
                    android:gravity="center"
                    android:id="@+id/orText"
                    android:layout_weight="1"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp2"
                    android:background="@color/bar_line"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/dp10"
                    android:layout_gravity="center"
            />
        </TableRow>
        <!--<Icom.google.android.gms.common.SignInButton-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/signInView"/>-->

    </LinearLayout>


</RelativeLayout>